tests/snapshots/examples_fixtures/type_system__failing__87_hm_pattern_binding_constrained_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Unit with String.

  --> examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:6:5
  |
6 |     x
  |     ^
  |     - expected Unit, found String
  |     - return expression type is known at compile time

Help:
  return expression type does not match the declared return type
== stdout ==
<not executed>
